# Neti_search

./: .env  .env.example  .gitignore  PRD.md  README.md  implementation_plan.md
backend/: pyproject.toml
backend/neti_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_api.py  test_live_research.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/components/: dashboard-shell.tsx  metric-card.tsx  research-result.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
