[project]
name = "neti-search"
version = "0.1.0"
description = "Research-first MVP for regulated stablecoin and ledger intelligence."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "exa-py>=2.7.0",
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.13.1",
  "pypdf>=5.9.0",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.48",
  "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: calls real third-party APIs",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
